--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hexo-generator-searchdb": "^1.3.3",
     "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-helper-live2d": "^3.1.1",
     "hexo-lazyload": "^1.3.6",
     "hexo-lazyload-image": "^1.0.9",
     "hexo-neat": "^1.0.9",
@@ -31,7 +32,9 @@
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
     "hexo-symbols-count-time": "^0.7.1",
+    "hexo-tag-aplayer": "^3.0.4",
     "hexo-tag-cloud": "^2.1.2",
+    "hexo-tag-dplayer": "^0.3.3",
     "hexo-theme-landscape": "^0.0.3",
     "hexo-wordcount": "^6.0.1"
   }
