--- a/_config.yml
+++ b/_config.yml
@@ -204,3 +204,14 @@ live2d:
 #MeingJS支持
 aplayer:
   meting: true
+
+# Extensions
+## Plugins: http://hexo.io/plugins/
+#RSS订阅
+plugin:
+- hexo-generator-feed
+#Feed Atom
+feed:
+type: atom
+path: atom.xml
+limit: 20
