--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ relative_link: false
 future: true
 highlight:
   enable: true
-  line_number: true
+  line_number: false
   auto_detect: false
   tab_replace: ''
   wrap: true
@@ -171,10 +171,13 @@ neat_js:
 
 # 图片懒加载
 lazyload:
-  enable: false 
-  onlypost: false
-  loadingImg: themes/next-reloaded/source/images/loading.gif #可选 eg. ./images/loading.png
+  enable: false
+  onlypost: false # optional
+  loadingImg: ./images/loading.gif # optional eg ./images/loading.gif
+  isSPA: false # optional
+  preloadRatio: 3 # optional, default is 1
 
+  
 # 百度主动推送
 baidu_url_submit:
   count: 100 				     ## 提交最新的1个链接
@@ -185,7 +188,7 @@ baidu_url_submit:
 # Live2D
 ## https://github.com/EYHN/hexo-helper-live2d
 live2d:
-  enable: true
+  enable: ture
   scriptFrom: local
   pluginRootPath: live2dw/
   pluginJsPath: lib/
@@ -195,7 +198,7 @@ live2d:
   model:
     use: live2d-widget-model-hijiki # 模型：https://huaji8.top/post/live2d-plugin-2.0/
   display:
-    position: right
+    position: left
     width: 100
     height: 200
   mobile:
